# cognic-skill-warehouse-data

./: .gitignore  README.md  SKILL.md  cognic-pack-manifest.toml  cosign.pub  pyproject.toml
.github/workflows/: ci.yml  sign-and-publish.yml
golden/: manifest.toml  queries.jsonl
src/cognic_skill_warehouse_data/: __init__.py
tests/: test_golden_corpus.py  test_manifest_consistency.py  test_release_policy.py  test_skill_md.py
